# care-coordinator-assistant

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  flask-app.py
app/: Dockerfile  README.md  agent.py  config.py  main.py  models.py  provider_repository.py  pyproject.toml  tools.py
app/data/: providers.json
app/tests/: conftest.py  test_provider_repository.py
client/: Dockerfile  README.md  main.py  pyproject.toml
docs/: data_sheet.txt
